Fix add program button align

--- a/idea/frontend/src/features/voucher/ui/issue-voucher-modal/issue-voucher-modal.module.scss
+++ b/idea/frontend/src/features/voucher/ui/issue-voucher-modal/issue-voucher-modal.module.scss
@@ -15,6 +15,16 @@
   flex-direction: column;
   gap: 8px;
 
+  .input {
+    display: flex;
+    align-items: flex-end;
+    gap: 8px;
+
+    &.error {
+      align-items: center;
+    }
+  }
+
   ul {
     display: grid;
     grid-template-columns: repeat(5, minmax(0, 1fr));
